--- a/frontend/src/Components/styles.css
+++ b/frontend/src/Components/styles.css
@@ -5,13 +5,25 @@
   justify-content: center;
   align-items: center;
   min-height: 100vh;
-  background-color: black;
+  background-color: #121212;
   color: white;
 }
 
-/* .centered-form {
-  width: 300px;
-} */
+.centered-form {
+  background: linear-gradient(
+    180deg,
+    #222423 3.12%,
+    rgba(33, 36, 34, 0.26) 100%,
+    rgba(43, 45, 43, 0.01) 100%
+  );
+  box-shadow: 4px 8px 2px 2px rgba(10, 9, 9, 0.25);
+  border-radius: 16px;
+  z-index: 10;
+
+  padding: 30px;
+  display: flex;
+  flex-direction: column;
+}
 
 .form-class {
   align-items: center;
@@ -27,7 +39,6 @@
 .form-label {
   font-weight: bold;
   margin-bottom: 10px;
-  /* margin: 0 auto; */
 }
 
 .input-field {
@@ -47,7 +58,7 @@
 .login-btn {
   display: block;
   width: 32vw;
-  padding: 10px;
+  padding: 1 0px;
   font-size: 19px;
   height: 60px;
   background-color: rgb(218, 101, 47);
