--- a/frontend/src/Components/styles.css
+++ b/frontend/src/Components/styles.css
@@ -4,7 +4,7 @@
   width: 100vw;
   justify-content: center;
   align-items: center;
-  /* min-height: 100vh; */
+  min-height: 100vh;
   background-color: #121212;
   color: white;
 }
@@ -148,4 +148,99 @@ button[type="submit"]:hover {
   margin-left: 10vw;
   margin-top: 5vh;
   flex-direction: row;
+}
+.captured-image2 {
+  display: block;
+  width: 20vw;
+  font-size: 25px;
+  height: 40vh;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  font-weight: 600;
+  cursor: pointer;
+  margin-left: 3vw;
+  margin-top: 5vh;
+}
+
+.capture2 {
+  display: block;
+  width: 20vw;
+  font-size: 25px;
+  height: 10vh;
+  background-color: rgb(116, 113, 111);
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  font-weight: 600;
+  cursor: pointer;
+  margin-left: 3vw;
+  margin-top: 5vh;
+}
+
+/* loading page */
+.loading-page {
+  display: flex;
+  display: flex;
+  width: 100vw;
+  height: inherit;
+  height: 100vh;
+  background-color: #121212;
+  color: white;
+  text-align: center;
+  margin: 0 auto;
+  justify-content: center;
+  align-items: center;
+}
+
+.para {
+  text-align: center;
+  margin: 0 auto;
+  justify-content: center;
+  align-items: center;
+  font-size: 30px;
+}
+
+/* dashboard */
+
+.dashboard {
+  display: flex;
+  width: 100vw;
+  /* height: 100vh; */
+  background-color: #121212;
+  color: white;
+  height: auto;
+  flex-direction: column;
+  overflow-x: hidden;
+}
+.dialog-class {
+  display: flex;
+  flex-direction: column;
+  padding: 20px 20px;
+  width: 30vw;
+}
+
+.form-class {
+  display: flex;
+  flex-direction: column;
+}
+
+.label-class {
+  font-family: sans-serif;
+  font-size: 20px;
+}
+.add {
+  width: 10vw;
+  height: 40px;
+  background-color: gold;
+  color: black;
+  cursor: pointer;
+  margin-top: 20px;
+  border: none;
+}
+
+/* products */
+.prod-img {
+  width: 15vw;
+  height: 19vh;
 }
