totak money count added in cart

--- a/frontend/src/Components/styles.css
+++ b/frontend/src/Components/styles.css
@@ -355,9 +355,59 @@ img {
 
 .cart-page {
   display: flex;
-  width: 100vw;
+  /* width: 98vw; */
   min-height: 100vh;
   background-color: #121212;
   color: white;
+  /* flex-direction: column; */
+  overflow: hidden;
+}
+.productt-grid {
+  list-style: none;
+  display: flex;
   flex-direction: column;
+  display: grid;
+  grid-template-columns: repeat(3, 0.2fr);
+  gap: 10px;
+}
+.cart-items {
+  width: 80vw;
+}
+.price {
+  background-color: rgb(26, 26, 26);
+}
+.price-table {
+  width: 18vw;
+  margin: 0 auto;
+  border: 1px solid #ccc;
+  padding: 30px;
+  background-color: #fff;
+  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
+}
+
+.price-table ul {
+  list-style: none;
+  color: black;
+  padding: 0;
+}
+
+.bill-item {
+  display: flex;
+  justify-content: space-between;
+  padding: 5px 0;
+}
+
+.product-name {
+  font-weight: 6100;
+}
+
+.product-details {
+  font-size: 15px;
+  font-weight: 900;
+}
+.total {
+  font-size: 30px;
+  text-align: center;
+  font-weight: bolder;
+  color: rgb(100, 100, 100, 0.9);
 }
